<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.android.scorekeeperapp.MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/Column">

                    <TextView
                        style="@style/TeamName"
                        android:text="@string/team_a_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/gamesA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fouls"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                        <TextView
                            android:id="@+id/team_a_foul"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/foul_team_a"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marg_8"
                        android:gravity="center">

                        <ImageView
                            style="@style/IconStyle"
                            android:src="@drawable/yellowcard" />

                        <TextView
                            android:id="@+id/yellow_card_counter_team_a"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="@string/foul_team_a"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                        <ImageView
                            style="@style/IconStyle"
                            android:src="@drawable/redcard" />

                        <TextView
                            android:id="@+id/red_card_counter_team_a"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="@string/foul_team_a"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marg_24"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/team_a_goal"
                            style="@style/GoalString"/>

                    </LinearLayout>

                    <Button
                        style="@style/Button.Game.Goal"
                        android:onClick="addGoalTeamA"
                        android:text="@string/goal" />

                    <Button
                        style="@style/Button.Game"
                        android:onClick="addFoul"
                        android:text="@string/foul" />

                    <Button
                        android:id="@+id/yellow_card_button_team_a"
                        style="@style/Button.Game.YellowCard"
                        android:onClick="addCardForTeamA"
                        android:text="@string/yellow_card" />

                    <Button
                        android:id="@+id/red_card_button_team_a"
                        style="@style/Button.Game.RedCard"
                        android:onClick="addCardForTeamA"
                        android:text="@string/red_card" />
                </LinearLayout>

                <View style="@style/Separator" />

                <LinearLayout style="@style/Column">

                    <TextView
                        style="@style/TeamName"
                        android:text="@string/team_b_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/gamesB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fouls"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                        <TextView
                            android:id="@+id/team_b_foul"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="@string/foul_team_b"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marg_8"
                        android:gravity="center">

                        <ImageView
                            style="@style/IconStyle"
                            android:src="@drawable/yellowcard" />

                        <TextView
                            android:id="@+id/yellow_card_counter_team_b"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="@string/foul_team_a"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                        <ImageView
                            style="@style/IconStyle"
                            android:src="@drawable/redcard" />

                        <TextView
                            android:id="@+id/red_card_counter_team_b"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="@string/foul_team_a"
                            android:textColor="@color/fontColor"
                            android:textSize="@dimen/txtSize_16" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marg_24"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/team_b_goal"
                            style="@style/GoalString"/>
                    </LinearLayout>


                    <Button
                        style="@style/Button.Game.Goal"
                        android:onClick="addGoalTeamB"
                        android:text="@string/goal" />

                    <Button
                        style="@style/Button.Game"
                        android:onClick="addFoulTeamB"
                        android:text="@string/foul" />

                    <Button
                        android:id="@+id/yellow_card_button_team_b"
                        style="@style/Button.Game.YellowCard"
                        android:onClick="addCardForTeamB"
                        android:text="@string/yellow_card" />

                    <Button
                        android:id="@+id/red_card_button_team_b"
                        style="@style/Button.Game.RedCard"
                        android:onClick="addCardForTeamB"
                        android:text="@string/red_card" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/ResetArea">

                <Button
                    style="@style/Button.Game.Reset"
                    android:onClick="resetGame"
                    android:text="@string/btn_reset" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>